Refatoração do código, renomeando tudo e acrescentando pageObject. Projeto está todo arrumado e rodando liso.

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>clicarProdutoMenu.executarClicarProdutoMenu</td>
+<td>br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clicarProdutoMenuInexistente</td>
+<td>logarComSucesso</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginIncorreto</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
