--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\leonardo.sonoda\AppData\Local\Temp\testng-eclipse--1290626971\testng-customsuite.xml</span>
+                    <span>C:\Users\leonardo.sonoda\AppData\Local\Temp\testng-eclipse--30530878\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="clicarProdutoMenu.executarClicarProdutoMenu" hash-for-method="clicarProdutoMenuInexistente">clicarProdutoMenuInexistente</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta" hash-for-method="logarComSucesso">logarComSucesso</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta" hash-for-method="loginIncorreto">loginIncorreto</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">clicarProdutoMenu.executarClicarProdutoMenu</span>
+              <span class="class-name">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clicarProdutoMenuInexistente">
-                  </a> <!-- clicarProdutoMenuInexistente -->
-                  <span class="method-name">clicarProdutoMenuInexistente</span>
+                  <a name="logarComSucesso">
+                  </a> <!-- logarComSucesso -->
+                  <span class="method-name">logarComSucesso</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginIncorreto">
+                  </a> <!-- loginIncorreto -->
+                  <span class="method-name">loginIncorreto</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\leonardo.sonoda\AppData\Local\Temp\testng-eclipse--1290626971\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\leonardo.sonoda\AppData\Local\Temp\testng-eclipse--30530878\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;clicarProdutoMenu.executarClicarProdutoMenu&quot;/&gt;
+      &lt;class name=&quot;br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clicarProdutoMenuInexistente')
-data.setCell(0, 2, 'clicarProdutoMenu.executarClicarProdutoMenu')
-data.setCell(0, 3, 34);
+data.setCell(0, 1, 'loginIncorreto')
+data.setCell(0, 2, 'br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta')
+data.setCell(0, 3, 1832);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'logarComSucesso')
+data.setCell(1, 2, 'br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta')
+data.setCell(1, 3, 1740);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 ms</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">clicarProdutoMenu.executarClicarProdutoMenu</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">execut</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clicarProdutoMenuInexistente</span>
-                <span class="method-start">7576 ms</span>
+                <span class="method-name">logarComSucesso</span>
+                <span class="method-start">8256 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">fim</span>
-                <span class="method-start">7612 ms</span>
+                <span class="method-start">10000 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">execut</span>
+                <span class="method-start">10102 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginIncorreto</span>
+                <span class="method-start">16935 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">fim</span>
+                <span class="method-start">18768 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
