--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>20/03/25 13:51:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarClicarProdutoMenu.execut()[pri:0, instance:clicarProdutoMenu.executarClicarProdutoMenu@e320068]">&gt;&gt;execut</td> 
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&gt;&gt;execut</td> 
 <td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/25 13:51:22</td>   <td>7575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarClicarProdutoMenu.clicarProdutoMenuInexistente()[pri:0, instance:clicarProdutoMenu.executarClicarProdutoMenu@e320068]">clicarProdutoMenuInexistente</td> 
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:38</td>   <td>8255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.logarComSucesso()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">logarComSucesso</td> 
   <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/25 13:51:22</td>   <td>7611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarClicarProdutoMenu.fim()[pri:0, instance:clicarProdutoMenu.executarClicarProdutoMenu@e320068]">&lt;&lt;fim</td> 
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:40</td>   <td>9999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&lt;&lt;fim</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:40</td>   <td>10101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&gt;&gt;execut</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:46</td>   <td>16934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.loginIncorreto()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">loginIncorreto</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/03/26 16:01:48</td>   <td>18767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&lt;&lt;fim</td> 
 <td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
 </table>
