--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18.905</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">46.385</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta</td><td><a href="#m0">logarComSucesso</a></td><td rowspan="1">1585249298284</td><td rowspan="1">1740</td></tr><tr class="passedeven"><td><a href="#m1">loginIncorreto</a></td><td rowspan="1">1585249306963</td><td rowspan="1">1832</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro</td><td><a href="#m0">cadastroRepetido</a></td><td rowspan="1">1585349807527</td><td rowspan="1">15895</td></tr><tr class="passedeven"><td><a href="#m1">cadatroSucesso</a></td><td rowspan="1">1585349829602</td><td rowspan="1">16152</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta#logarComSucesso</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta#loginIncorreto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro#cadastroRepetido</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro#cadatroSucesso</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
