--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&gt;&gt;execut</td> 
-<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:40</td>   <td>10101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&gt;&gt;execut</td> 
-<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:40</td>   <td>9999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&lt;&lt;fim</td> 
-<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:48</td>   <td>18767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">&lt;&lt;fim</td> 
-<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:38</td>   <td>8255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.logarComSucesso()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">logarComSucesso</td> 
-  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/03/26 16:01:46</td>   <td>16934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.loginIncorreto()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@e320068]">loginIncorreto</td> 
-  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:56:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarCriarNovoCadastro.cadastroRepetido()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">cadastroRepetido</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:57:09</td>   <td>22075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarCriarNovoCadastro.cadatroSucesso()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">cadatroSucesso</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:56:39</td>   <td>-8066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarCriarNovoCadastro.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">&gt;&gt;execut</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:57:03</td>   <td>15971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarCriarNovoCadastro.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">&gt;&gt;execut</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:57:03</td>   <td>15898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarCriarNovoCadastro.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">&lt;&lt;fim</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6a9486">  <td>20/03/27 19:57:25</td>   <td>38228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarCriarNovoCadastro.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarCriarNovoCadastro@30a3107a]">&lt;&lt;fim</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
 </table>
