--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta</td>
+<td>br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>logarComSucesso</td>
+<td>clicarProdutoMenuInexistente</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginIncorreto</td>
+<td>clicarProdutoMenuSucesso</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
