--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">&gt;&gt;execut</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:23</td>   <td>11312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarLogarConta.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">&gt;&gt;execut</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:23</td>   <td>11242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">&lt;&lt;fim</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:32</td>   <td>19404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarLogarConta.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">&lt;&lt;fim</td> 
-<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:21</td>   <td>8828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.logarComSucesso()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">logarComSucesso</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
-<tr bgcolor="6a9486">  <td>20/03/28 14:33:30</td>   <td>17693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarLogarConta.loginIncorreto()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarLogarConta@30a3107a]">loginIncorreto</td> 
-  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:29:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarClicarProdutoMenu.clicarProdutoMenuInexistente()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">clicarProdutoMenuInexistente</td> 
+  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:29:59</td>   <td>6260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="executarClicarProdutoMenu.clicarProdutoMenuSucesso()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">clicarProdutoMenuSucesso</td> 
+  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:29:46</td>   <td>-7419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarClicarProdutoMenu.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">&gt;&gt;execut</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:29:53</td>   <td>144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;executarClicarProdutoMenu.execut()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">&gt;&gt;execut</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:29:53</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarClicarProdutoMenu.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">&lt;&lt;fim</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/03/31 16:30:02</td>   <td>8597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;executarClicarProdutoMenu.fim()[pri:0, instance:br.com.RsiHub3.ProjetoHubTDD.execucaoDosTestes.executarClicarProdutoMenu@51e2adc7]">&lt;&lt;fim</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
 </table>
